[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
    {name = "Alban Farchi", email = "alban.farchi@ecmwf.int"},
]
dependencies = []
name = "cpp-torch"
requires-python = ">= 3.11"
version = "0.1.0"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
cpp_torch = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.4.1,<3"
pytorch = ">=2.9.1,<3"
torch-geometric = ">=2.6.1,<3"
ipykernel = ">=7.1.0,<8"
rich = ">=14.2.0,<15"
rich-click = ">=1.9.5,<2"
ruff = ">=0.14.11,<0.15"
pixi-pycharm = ">=0.0.10,<0.0.11"
